[package]
name = "rust-test-project"
version = "0.1.0"
authors = ["Artem Pikulin <ortgma@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = "1.5.0"
futures = "0.3.5"
tokio = { version = "0.2.20", features = ["io-util", "rt-threaded", "stream", "tcp"] }